--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -89,7 +89,8 @@ body {
 		z-index: 1;
 		width: 100vw;
 		height: 100vh;
-		display: none;
+        // display: none;
+        opacity: 0;
 		background-repeat: no-repeat;
 	}
 }
